--- a/app.json
+++ b/app.json
@@ -37,7 +37,7 @@
     "formation": {
         "web": {
             "quantity": 1,
-            "size": "free"
+            "size": "eco"
         }
     },
     "image": "heroku/php"
